objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Clients__c</fullName>
        <label>Clients</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mordor &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Legola&apos;s Bow Factory</fullName>
                </value>
                <value>
                    <fullName>Gimli´s Axe Shop</fullName>
                </value>
                <value>
                    <fullName>Frodo – Professional Ringbearer</fullName>
                </value>
                <value>
                    <fullName>Sam - Ringbearer Assistance</fullName>
                </value>
                <value>
                    <fullName>Sauron / Saruman Special Cuisine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopDeployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StopDeployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inGit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>inGit</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Eastern_World</fullName>
        <active>true</active>
        <label>Eastern World</label>
    </recordTypes>
    <recordTypes>
        <fullName>Western_World</fullName>
        <active>true</active>
        <label>Western World</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>